<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".logging.SignUpActivity">

    <TextView
        android:id="@+id/calo4u_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/nunito_black"
        android:lineHeight="50dp"
        android:paddingTop="20dp"
        android:text="@string/calo4u"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calo4u_title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/nunito_bold"
        android:lineHeight="50dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/medium_peachy"
        android:textSize="30dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_below="@+id/signup_title"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_text_border"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="15dp" />

    <EditText
        android:id="@+id/dob_input"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_below="@+id/name_input"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/dob"
        android:inputType="datetime"
        android:padding="15dp"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_below="@+id/dob_input"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_below="@+id/email_input"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/username"
        android:padding="15dp"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_below="@+id/username_input"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:paddingTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/signup"
        android:fontFamily="@font/nunito_black"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:background="@drawable/log_button"/>

    <TextView
        android:id="@+id/have_account_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="110dp"
        android:text="@string/have_account"
        android:fontFamily="@font/nunito"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/have_account_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_button"
        android:layout_toEndOf="@id/have_account_1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:text="@string/login"
        android:textColor="@color/dark_green"
        android:fontFamily="@font/nunito"
        android:textSize="18dp"/>

</RelativeLayout>