...
        android:textAlignment="center"
        android:textColor="@color/medium_peachy"
        android:textSize="30dp"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/username_input"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_text_border"
        android:hint="@string/username_or_email"
        android:padding="15dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_input"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_text_border"
        android:hint="@string/password"
        android:padding="15dp"
        android:paddingTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/login"
...
        android:layout_marginTop="20dp"
        android:layout_marginLeft="90dp"
        android:text="@string/dont_have_account"
        android:fontFamily="@font/nunito"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/dont_have_account_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_toEndOf="@id/dont_have_account_1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
...
