<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.calculator.FragmentBmiCalculator">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bmi_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/bmi_cal"
        android:fontFamily="@font/nunito_extra_bold"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="@color/dark_peachy"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/age_input"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/fade_red"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:hint="Age"
        android:fontFamily="@font/nunito_medium_italic"
        android:inputType="number"
        android:padding="15dp"
        android:layout_below="@+id/bmi_header" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/gender_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/gender"
        android:fontFamily="@font/nunito_medium_italic"
        android:layout_toRightOf="@+id/age_input"
        android:layout_below="@+id/bmi_header"/>
    <RadioGroup
        android:id="@+id/gender_input_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/gender_input"
        android:layout_below="@id/bmi_header"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/male_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:text="Male" />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/female_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:text="Female"/>
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/height_input"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/fade_green"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/height"
        android:inputType="number"
        android:fontFamily="@font/nunito_italic"
        android:padding="15dp"
        android:layout_below="@id/age_input"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/weight_input"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/fade_yellow"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/weight"
        android:inputType="number"
        android:fontFamily="@font/nunito_italic"
        android:padding="15dp"
        android:layout_below="@id/height_input" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_input"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_log"
        android:backgroundTint="@color/dark_peachy"
        android:fontFamily="@font/nunito_black"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/bmi_result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/nunito_black"
        android:textColor="@color/light_blue"
        android:text="@string/bmi_result"
        android:textSize="25dp"
        android:visibility="invisible"
        android:layout_below="@+id/calculate_button"/>

    <TextView
        android:id="@+id/bmi_result"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_below="@id/bmi_result_text"
        android:layout_centerInParent="true"
        android:layout_marginTop="2dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/fade_blue"
        android:fontFamily="@font/nunito_medium"
        android:gravity="center"
        android:text="{result}"
        android:textColor="@color/light_blue"
        android:textSize="25dp"
        android:visibility="invisible"/>
</RelativeLayout>