...
        android:title="" />
    <item
        android:id="@+id/search_tab"
        android:icon="@drawable/selector_navbar_search"
        android:title="" />
    <item
        android:id="@+id/calculate_tab"
        android:icon="@drawable/selector_navbar_calculate"
        android:title="" />
    <item
        android:id="@+id/menu_tab"
        android:icon="@drawable/selector_navbar_menu"
        android:title="" />
...
